--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <% include ../partials/head %>
+    
 </head>
 <body>
 
 <header>
-    <% include ../partials/header %>
+    Cabeçalho
 </header>
 
 <main>
@@ -17,7 +17,7 @@
 </main>
 
 <footer>
-    <% include ../partials/footer %>
+    Rodape
 </footer>
 
 </body>
