--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <base href="/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon-16.png?v=4">
     
     <title>Lírio de Papel</title>
 
@@ -13,8 +13,6 @@
     <!-- base -->
     <link rel="stylesheet" href="assets/css/fonts.css">
     <link rel="stylesheet" href="assets/css/base.css">
-    <!-- modules -->
-    <link rel="stylesheet" href="modules/home/home.component.css">
     <!-- components -->
     <link rel="stylesheet" href="components/header/header.component.css">
     <link rel="stylesheet" href="components/footer/footer.component.css">
@@ -39,7 +37,8 @@
     <script src="app.controller.js"></script>
 
     <!-- modules -->
-    <script src="modules/home/home.component.js"></script>
+    <script src="modules/home/home.controller.js"></script>
+    <script src="modules/home/about.controller.js"></script>
     <!-- components -->
     <script src="components/header/header.component.js"></script>
     <script src="components/footer/footer.component.js"></script>
