--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <base href="/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon-16.png?v=4">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon-16.png?v=5">
     
     <title>Lírio de Papel</title>
 
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
     <!-- base -->
     <link rel="stylesheet" href="assets/css/fonts.css">
-    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/base.css?v=3">
     <!-- components -->
     <link rel="stylesheet" href="components/header/header.component.css">
     <link rel="stylesheet" href="components/footer/footer.component.css">
@@ -38,7 +38,10 @@
 
     <!-- modules -->
     <script src="modules/home/home.controller.js"></script>
-    <script src="modules/home/about.controller.js"></script>
+    <script src="modules/about/about.controller.js"></script>
+    <script src="modules/make/make.controller.js"></script>
+    <script src="modules/work/work.controller.js"></script> 
+    <script src="modules/contact/contact.controller.js"></script>
     <!-- components -->
     <script src="components/header/header.component.js"></script>
     <script src="components/footer/footer.component.js"></script>
