animação scroll header

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
     <!-- base -->
     <link rel="stylesheet" href="assets/css/fonts.css">
+    <link rel="stylesheet" href="assets/css/font-awesome.css">
     <link rel="stylesheet" href="assets/css/base.css?v=3">
     <!-- components -->
     <link rel="stylesheet" href="components/header/header.component.css">
@@ -34,6 +35,7 @@
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
     <script src="app.controller.js"></script>
+    <script src="assets/js/global.js"></script>
     
     <!-- modules -->
     <script src="modules/home/home.controller.js"></script>
