--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="assets/css/fonts.css">
     <link rel="stylesheet" href="assets/css/font-awesome.css">
     <link rel="stylesheet" href="assets/css/base.css?v=3">
+    <!-- modules -->
+    <link rel="stylesheet" href="modules/home/home.css">
     <!-- components -->
     <link rel="stylesheet" href="components/header/header.component.css">
     <link rel="stylesheet" href="components/footer/footer.component.css">
@@ -21,7 +23,7 @@
 <body data-ng-app="App" data-ng-controller="AppController as vm" data-ng-cloak>
 
     <app-header></app-header>
-    <main class="container" data-ng-view></main>
+    <main data-ng-view></main>
     <app-footer></app-footer>
 
     <!-- node_modules -->
@@ -36,6 +38,7 @@
     <script src="app.config.js"></script>
     <script src="app.controller.js"></script>
     <script src="assets/js/global.js"></script>
+    <script src="assets/js/jssor.slider.min.js"></script>
     
     <!-- modules -->
     <script src="modules/home/home.controller.js"></script>
